--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,7 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
+  color: rgba(22, 26,37, 0.6);
   background: linear-gradient(#F6F7F9, #E9ECF5);
   min-height: 100vh;
   display: flex;
